# soapy_iio

./: CMakeLists.txt  IIODevice.cpp  IIODevice.hpp  MyDeviceSupport.cpp  README.md  Stream.cpp  Stream.hpp  ad9361.cpp  ad9361.hpp
tests/: CMakeLists.txt  test_main.cpp
